roles and rollbacks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,4 @@
 host_key_checking = False
 inventory = /home/student/mycode/inv/dev/
 retry_files_enabled = False
+roles_path = /home/student/mycode/roles/
